Put a test messange on the index

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									<div class="content">
 										<header>
 											<h1>Welcome to the<br />
-											esTech website!</h1>
+											esTech website! BETA THIS SITE IS THE NEW VERSION</h1>
 											<p>The official website for the esTech YouTube channel.</p>
 										</header>
 										<p>Welcome to the esTech website! On this website, I  create tutorials, blog posts, extra resources to go with a YouTube video, or even showcases of projects. This website is associated with a YouTube channel named esTech, in which I post videos on all things technology!</p>
