Add "View Source" link to footer

--- a/index.html
+++ b/index.html
@@ -146,23 +146,23 @@
 								</nav>
 
 							<!-- Sidebar Footer -->
-								<footer id="footer">
-									<p xmlns:cc="https://creativecommons.org/ns#" xmlns:dct="https://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://estech321.github.io">This website (excluding the design)</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" >CC BY-NC-SA 4.0</a></p>
-									<p>Design by <a href="https://html5up.net" target="_blank">HTML5 Up</a></p>
-									
-								</footer>
+							<footer id="footer">
+								<p xmlns:cc="https://creativecommons.org/ns#" xmlns:dct="https://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://estech321.github.io">This website (excluding the design)</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" >CC BY-NC-SA 4.0</a></p>
+								<p>Design by <a href="https://html5up.net" target="_blank">HTML5 Up</a></p>
+								<p>Hosted on GitHub. <a href="https://github.com/estech321/estech321.github.io">View source</a></p>
+							</footer>
 
-						</div>
 					</div>
+				</div>
 
-			</div>
+		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+		<script src="../assets/js/jquery.min.js"></script>
+		<script src="../assets/js/browser.min.js"></script>
+		<script src="../assets/js/breakpoints.min.js"></script>
+		<script src="../assets/js/util.js"></script>
+		<script src="../assets/js/main.js"></script>
 
-	</body>
+</body>
 </html>
