Add updates, redirect to new WordPress website

--- a/design/app_icons.html
+++ b/design/app_icons.html
@@ -1,16 +1,13 @@
 <!DOCTYPE HTML>
 <!--
-	esTech Master homemade website
-	made by Eric in 2023
-	YouTube channel: youtube.com/@estech321
-	Based on the following template:
-		Editorial by HTML5 UP
-		html5up.net | @ajlkn
-		Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Official esTech Website
+	Content licensed under CC BY-NC-SA 4.0
+	Design by HTML5Up
+	estech321.github.io
 -->
 <html>
 	<head>
-		<title>Showcases | esTech</title>
+		<title>App Icons | esTech</title>
 		<link rel="icon" type="image/x-icon" href="../images/favicon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -28,7 +25,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="../index.html" class="logo"><strong>esTech</strong> by Eric</a>
+									<a href="../index.html" class="logo"><strong>esTech</strong> by Eric<p style="text-align: center">NOTE: THIS WEBSITE IS NO LONGER MAINTAINED AND HAS BEEN MOVED TO <a href="https://estech321.wordpress.com">ESTECH321.WORDPRESS.COM</a></p></a>
 									<ul class="icons">
 										<li><a href="https://youtube.com/@estech321" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 										<li><a href="https://github.com/estech321" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -38,22 +35,37 @@
 							<!-- Top Content -->
 								<section>
 									<header class="main">
-										<center><h1>Project Showcases</h1></center>
+										<center><h1>Custom Application Icons</h1></center>
 									</header>
 
-									<span class="image main"><img src="images/stock-robot.jpg" alt="" /></span>
+									<span class="image main"><img src="images/apps.png" alt="" /></span>
 
-									<p>If I build a project worth showcasing, I'll post it here. Whether it's a Z80 breadboard computer that counts in binary or a homemade remote-control car, if it's interesting, I'll publish it.</p>
+									<p>Once an app is installed, its logo is visible throughout the computer. If that logo doesn't fit the design of the operating system, it can clash and make your desktop look worse. So, I have designed alternative icons for all the apps I use who's logo doesn't match MacOS.</p>
 
 								</section>
 								<!-- List section -->
 								<section>
 
-									<center>
-									<p><h1>Hold tight!</h1></p>
-									<p><h2>What you're looking for hasn't been made yet. Please check back later.</h2></p>
-								</center>
-									
+									<div class="gallery">
+										<a href="app_icons/Audacity.png" download>
+										  <img src="app_icons/Audacity.png" alt="#" width="600" height="400">
+										</a>
+										<div class="desc">Audacity</div>
+									  </div>
+
+									  <div class="gallery">
+										<a target="_blank" href="app_icons/BCSSTV.png">
+										  <img src="app_icons/BCSSTV.png" alt="#" width="600" height="400">
+										</a>
+										<div class="desc">Black Cat SSTV</div>
+									  </div>
+									  <div class="gallery"> 
+										<a target="_blank" href="app_icons/Blender.png">
+										  <img src="app_icons/ih.png" alt="Cinque Terre" width="600" height="400">
+										</a>
+										<div class="desc">ih</div>
+									  </div>
+
 								</section>
 
 						</div>
@@ -80,7 +92,7 @@
 								<li><a href="../tutorials/tutorials.html">Tutorials</a></li>
 								<li><a href="../resources/resources.html">Resources</a></li>
 								<li><a href="../blog/blog.html">Blog</a></li>
-								<li><a href="../showcases/showcases.html">Project Showcases</a></li>
+								<li><a href="../design/design.html">Design</a></li>
 							</ul>
 						</nav>
 
