--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE HTML>
 <!--
-	esTech Master homemade website - second in priority to the Google Site
-	made by Eric in 2023
-	YouTube channel: youtube.com/@estech321
-	Based on the following template:
-		Editorial by HTML5 UP
-		html5up.net | @ajlkn
-		Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Official esTech Website
+	Content licensed under CC BY-NC-SA 4.0
+	Design by HTML5Up
+	estech321.github.io
 -->
 <html>
 	<head>
-		<title>Home | esTech</title>
+		<title>Home | esTech</title> 
 		<link rel="icon" type="image/x-icon" href="images/favicon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -28,7 +25,15 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>esTech</strong> by Eric</a>
+									<script>
+										window.location.replace("https://estech321.wordpress.com");
+									</script>
+									<script>
+										
+										  alert("This website is no longer maintained and has moved to estech321.wordpress.com. Sorry for the inconvenience.");
+										
+										</script>
+									<a href="index.html" class="logo"><strong>esTech</strong> by Eric<p style="text-align: center">NOTE: THIS WEBSITE IS NO LONGER MAINTAINED AND HAS BEEN MOVED TO <a href="https://estech321.wordpress.com">ESTECH321.WORDPRESS.COM</a></p></a>
 									<ul class="icons">
 										<li><a href="https://youtube.com/@estech321" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 										<li><a href="https://github.com/estech321" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -43,7 +48,7 @@
 											esTech website!</h1>
 											<p>The official website for the esTech YouTube channel.</p>
 										</header>
-										<p>Welcome to the esTech website! On this website, I  create tutorials, blog posts, extra resources to go with a YouTube video, or even showcases of projects. This website is associated with a YouTube channel named esTech, in which I post videos on all things technology!</p>
+										<p>Welcome to the esTech website! On this website, I  create tutorials, blog posts, extra resources to go with a YouTube video, or even design of projects. This website is associated with a YouTube channel named esTech, in which I post videos on all things technology!</p>
 										<a href="blog/about_site.html" class="button primary">Read More</a>
 									</div>
 									<span class="image object">
@@ -84,9 +89,9 @@
 										<article>
 											<span class="icon solid fa-video"></span>
 											<div class="content">
-												<h3>Project Showcases</h3>
+												<h3>Design</h3>
 												<p>If I build a project worth showcasing, I'll post it here. Whether it's a Z80 breadboard computer that counts in binary or a homemade remote-control car, if it's interesting, I'll publish it.</p>
-												<a href="showcases/showcases.html" class="button">Browse Project Showcases</a>
+												<a href="design/design.html" class="button">Browse Design</a>
 											</div>
 										</article>
 									</div>
@@ -141,7 +146,7 @@
 										<li><a href="tutorials/tutorials.html">Tutorials</a></li>
 										<li><a href="resources/resources.html">Resources</a></li>
 										<li><a href="blog/blog.html">Blog</a></li>
-										<li><a href="showcases/showcases.html">Project Showcases</a></li>
+										<li><a href="design/design.html">Design</a></li>
 									</ul>
 								</nav>
 
